2010-05-25  Andreia Gaita  <avidigal@novell.com>

	* plugin.cpp: remove reentrant hack for chrome, fixed upstream
	(see http://code.google.com/p/chromium/issues/detail?id=32797)

2010-04-30  Andreia Gaita  <avidigal@novell.com>

	* plugin.cpp: set the surface on the bridge

2010-04-28  Andreia Gaita  <avidigal@novell.com>

	* Makefile.am, plugin.cpp: remove ff36 bridge.

2010-04-27  Jeffrey Stedfast  <fejj@novell.com>

	* plugin.cpp (TryLoadBridge): Set the Surface on the Bridge rather
	than the plugin.

	* curl/*.cpp|h: Updated for API changes.

	* browser-bridge.h (BrowserBridge): Instead of having a
	PluginInstance member, keep a Surface member instead.

2010-04-27  Jeffrey Stedfast  <fejj@novell.com>

	* curl/*.cpp|h: Updated for API changes.

	* browser-bridge.h (BrowserBridge): Make the plugin and
	shutting_down members private and provide accessors for them.

2010-04-09  Andreia Gaita  <avidigal@novell.com>

	* browser-bridge.h: fix premature abortion due to missing
	initialization

2010-03-22  Andreia Gaita  <avidigal@novell.com>

	* browser-bridge.h: Add Shutdown method
	* plugin.cpp: (Shutdown) call the bridge Shutdown method

2010-03-19  Andreia Gaita  <avidigal@novell.com>

	* plugin-entry.cpp: don't touch Deployment on NPN_Mem* calls, the
	curl backend calls them on side threads

2010-03-03  Andreia Gaita  <avidigal@novell.com>

	* plugin.cpp: If available, load the curl backend by default for
	all non-ff browsers

2010-02-26  Andreia Gaita  <avidigal@novell.com>

	* Makefile.am: fix conditional compilation of the bridges, and
	add missing ff36 lib copy

2010-02-26  Andreia Gaita  <avidigal@novell.com>

	* Makefile.am: add bridge/ subdir to the build
	* browser-bridge.h: save a ref to the plugin, the curl bridge
	needs it to add tick calls
	* plugin.cpp: (Shutdown) kill the bridge only after shutting
	down the deployment, because it aborts downloaders and the curl
	bridge downloaders need to know if the plugin is shutting down to